Check cluster galaxy with nodes and load balancers to make sure we can reach out unhealthy nodes and backfill
